# Project-Chimera

./: .coderabbit.yaml  .coverage.gashe.pid21952.XObzwXix  .env.example  .gitignore  CLAUDE.md  DAY1_COMPLETION_CHECKLIST.md  DAY1_SUBMISSION_REPORT.md  DAY2_COMPLETION_CHECKLIST.md  DAY3_COMPLETION_CHECKLIST.md  Dockerfile  MCP_SENSE_SETUP.md  Makefile  README.md  context.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Project Chimera SRS Document_ Autonomous Influencer Network.docx  Project_Chimera_3Day_Challenge.md  Project_Chimera_3Day_Challenge.md.docx  Project_Chimera_SRS.md  ~$oject_Chimera_3Day_Challenge.md.docx
research/: architecture_strategy.md  research_notes.md  tooling_strategy.md
skills/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
src/: __init__.py  main.py
src/judge/: __init__.py
src/planner/: __init__.py
src/worker/: __init__.py
tests/: README_TDD.md  __init__.py  conftest.py  test_example.py  test_judge.py  test_planner.py  test_skills_interface.py  test_trend_fetcher.py  test_worker.py
